[Add] React icons and fix some styles

--- a/src/styles/CreateButton.css
+++ b/src/styles/CreateButton.css
@@ -1,5 +1,5 @@
 .create-button {
-    background-color: #080; /* Bright green */
+    background-color: #0f0; /* Bright green */
     color: #000; /* Black */
     border: 2px solid #000; /* Bright green border */
     border-radius: 30px;
