--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,7 +10,7 @@ body {
     margin: auto;
     min-width: 600px;
     margin-top: 30px;
-    height: 80vh;
+    height: 900px;
     background:  #888;
     display: flex;
     flex-direction: column;
