--- a/src/styles/TodoItem.css
+++ b/src/styles/TodoItem.css
@@ -3,9 +3,7 @@ ul {
 }
 
 .TodoItem {
-    padding: 0;
-    width: 50%;
-    margin-left: 25%;
+    min-width: 100%;
     list-style: none;
     position: relative;
     margin-top: 3px;
