--- a/src/styles/TodoSearch.css
+++ b/src/styles/TodoSearch.css
@@ -7,9 +7,8 @@
     font-size: 16px;
     height: 40px;
     padding: 0 15px;
-    width: 48%;
-    margin: 0 auto;
-    display: block;
+    min-width: calc(100%-4px);
+    position: relative;
     box-shadow: 0 0 10px rgba(0, 255, 0, 0.3);
 }
 
