--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,11 +6,9 @@ body {
 }
 
 .container {
-    width: 70%;
+    width: 100vw;
+    height: 100vh;
     margin: auto;
-    min-width: 600px;
-    margin-top: 30px;
-    height: 900px;
     background:  #888;
     display: flex;
     flex-direction: column;
@@ -19,8 +17,9 @@ body {
 
 
 /* Tablet Styles */
-@media (min-width: 600px) {
+@media (min-width: 800px) {
     .container {
+        width: 500px;
         padding: 20px;
     }
 }
@@ -28,6 +27,9 @@ body {
 /* Desktop Styles */
 @media (min-width: 1024px) {
     .container {
+        margin-top: 24px;
+        width: 800px;
+        height: 760px;
         padding: 30px;
     }
 
