--- a/src/styles/TodoSearch.css
+++ b/src/styles/TodoSearch.css
@@ -7,7 +7,9 @@
     font-size: 16px;
     height: 40px;
     padding: 0 15px;
-    min-width: calc(100%-4px);
+    max-width: 400px;
+    min-width: 300px;
+    margin: 0 auto;
     position: relative;
     box-shadow: 0 0 10px rgba(0, 255, 0, 0.3);
 }
